--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "mode": "auto",
             "program": "${fileDirname}",
             "env": {},
-            "args": ["demo4.csv", "XYY"]
+            "args": ["regex.rg", "x"]
         }
     ]
 }
